--- a/swadge/pulse/manifest.json
+++ b/swadge/pulse/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Pulse Swadge",
     "version": "3.1.1",
-    "new_install_prompt_erase": true,
+    "new_install_prompt_erase": false,
     "new_install_improv_wait_time": false,
     "builds": [
         {
