Update files on flasher page to 3.1.1 tag

--- a/swadge/pulse/manifest.json
+++ b/swadge/pulse/manifest.json
@@ -16,7 +16,7 @@
                     "offset": 32768
                 },
                 {
-                    "path": "swadge-e559005.bin",
+                    "path": "f05e5d7_swadge2024.bin",
                     "offset": 65536
                 }
             ]
